data/derived/comb/progs/unify/prog6793.ml.out
Characters 252-253:
  | Average (x3,x4)      -> (eval(x3,x,y) +. eval(x4,x,y)) /. 2
                                                              ^
Error: This expression has type int but an expression was expected of type
         float
